# apis-in-ml

./: .flake8  .gitattributes  .gitignore  .isort.cfg  Dockerfile  README.md  pyproject.toml  requirements.txt
src/apis_in_ml/: classifier.py  crud.py  database.py  fellowship.db  main.py  models.py  sqlite.py
tests/: conftest.py  test_participants.py
